--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,6 @@ devcanvas = "shebangmd.cli:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/shebangMarkdownIDE"]
