commit for pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "shebangmarkdown"              # your package name on PyPI
-version = "0.1.1"
+version = "0.1.4"
 description = "Terminal-based Markdown IDE built with Textual by Aryaneel Shivam"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-devcanvas = "shebangmd.cli:main"
+shebangmd = "shebangMarkdownIDE.cli:main"
 
 [build-system]
 requires = ["hatchling"]
